<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <!--
        Generate an id which can be used when the location menu item is added in MainActivity
    -->
    <item name="menu_location" type="id"/>

    <item name="tab_id_1" type="id"/>
    <item name="tab_id_2" type="id"/>
    <item name="tab_id_3" type="id"/>

</resources>